# misis_2sem

./: .gitignore  README.md  gitignore.rtf
aparin_g_m/: CMakeLists.txt  build.sh
aparin_g_m/bin.dbg/: arrayd_test  arrayt_test  rational_test
aparin_g_m/prj.cw/: CMakeLists.txt
aparin_g_m/prj.cw/detection/: CMakeLists.txt  detection.cpp
aparin_g_m/prj.cw/detection/include/detection/: detection.hpp
aparin_g_m/prj.cw/doc/: Doxyfile.in
aparin_g_m/prj.cw/docs/: Doxyfile
aparin_g_m/prj.cw/test/: CMakeLists.txt  main.cpp
aparin_g_m/prj.cw/test/output_videos/: file_for_save.rtf
aparin_g_m/prj.lab/: CMakeLists.txt  Makefile  cmake_install.cmake
aparin_g_m/prj.lab/arrayd/: arrayd.cpp
aparin_g_m/prj.lab/arrayd/include/arrayd/: arrayd.hpp
aparin_g_m/prj.lab/arrayt/include/arrayt/: arrayt.hpp
aparin_g_m/prj.lab/matrixs/: matrixs.cpp
aparin_g_m/prj.lab/matrixs/include/matrixs/: matrixs.hpp
aparin_g_m/prj.lab/orto/: orto.cpp
aparin_g_m/prj.lab/rational/: Makefile  cmake_install.cmake  rational.cpp
aparin_g_m/prj.lab/rational/include/rational/: rational.hpp
aparin_g_m/prj.test/: CMakeLists.txt  Makefile  arrayd_test.cpp  arrayt_test.cpp  cmake_install.cmake  rational_test.cpp
aparin_g_m/prj.test/arrayd/: arrayd_test.cpp
aparin_g_m/prj.test/rational/: Makefile  cmake_install.cmake  rational_test.cpp
aparin_g_m/rational/: CMakeLists.txt  rational.doctest.cpp  test.cpp
aparin_g_m/rational/rational/: CMakeLists.txt  rational.cpp  rational.h
